--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>corporate</title>
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
   <div class="page-header">
+    <div class="page-header__wrapper">
     <h1 class="page-header__title">There is no other platforms for you as like </h1>
-    <div class="header-inner">
-      <span class="header-inner__play-icon"></span>
-      <button class="btn-try-now">Try now</button>
-      <p class="header-inner__condition">
-        * No need to add cards details
-      </p>
+    <span class="page-header__play-icon"></span>
+    <button class="btn-try-now">Try now</button>
+    <p class="page-header__condition">
+      * No need to add cards details
+    </p>
     </div>
   </div>
   <div class="section-design">
