--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         NEW DESIGN
       </p>
       <h2 >There is no other platforms for you as like ....</h2>
-      <p>
-        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.Donec sed odio dui.<br /> Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+      <p class="section-design__text">
+        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper. <br /> <br /> Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
       </p>
     </div>
     <div class="section-design__right-column">
@@ -33,30 +33,32 @@
   </div>
   <div class="features">
     <div class="features__wrapper">
-      <p class="red-title">
+      <p class="red-title red-title--margin">
         NEW FEATURES
       </p>
       <h2>Some awesone features</h2>
-      <div class="awesone">
-        <span class="awesone__icon"></span>
-        <h3 class="awesone__title">Some awesone features</h3>
-        <p  class="awesone__text">
-          Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
-        </p>
-      </div>
-      <div class="awesone">
-        <span class="awesone__icon"></span>
-        <h3 class="awesone__title">Some awesone features</h3>
-        <p  class="awesone__text">
-          Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
-        </p>
-      </div>
-      <div class="awesone">
-        <span class="awesone__icon"></span>
-        <h3 class="awesone__title">Some awesone features</h3>
-        <p  class="awesone__text">
-          Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
-        </p>
+      <div class="features__content">
+        <div class="awesone">
+          <span class="picture__icon"></span>
+          <h3 class="awesone__title">Some awesone features</h3>
+          <p  class="awesone__text">
+            Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+          </p>
+        </div>
+        <div class="awesone">
+          <span class="plane__icon"></span>
+          <h3 class="awesone__title">Some awesone features</h3>
+          <p  class="awesone__text">
+            Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+          </p>
+        </div>
+        <div class="awesone">
+          <span class="lamp__icon"></span>
+          <h3 class="awesone__title">Some awesone features</h3>
+          <p  class="awesone__text">
+            Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur. Nulla vitae elit libero, a pharetra augue.
+          </p>
+        </div>
       </div>
       <span class="features__ico-headphones"></span>
       <span class="features__ico-coffee"></span>
@@ -64,17 +66,19 @@
     </div>
   </div>
   <div class="description">
-    <div class="description__wrapper">
+    <div class="description__left-colum">
+      <span class="pink-triangle"></span>
+      <span class="img-laptop"></span>
+    </div>
+    <div class="description__right-colum">
       <p class="red-title">
         NEW FEATURES
       </p>
       <h2>Resposive design, just need your tap ....</h2>
-      <p>
+      <p class="description__text">
         Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn. Vestibulum felis euismod semper.
       </p>
     </div>
-    <span class="pink-triangle"></span>
-    <span class="img-laptop"></span>
   </div>
   <div class="clients">
     <div class="clients__wrapper">
@@ -91,7 +95,7 @@
         <h3>Jonathon Doe</h3>
         <sapan class="clients__name-company">Co Founder</sapan>
         <p class="clients__text-opinion">
-          “Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”
+          “Pellentesque ornare sem lacinia quam. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”
         </p>
       </div>
       <div class="clients__item">
@@ -99,7 +103,7 @@
         <h3>Jonathon Doe</h3>
         <sapan class="clients__name-company">Co Founder</sapan>
         <p class="clients__text-opinion">
-          “Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id gravida at eget metus. Etiasem malesuada magn”
+          “Aenean eu leo quam. Pellentesque ornare sem lacinia qua emere wancerid elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Etiasem malesuada magn”
         </p>
       </div>
     </div>
