добавил блок с формой

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
       </div>
     </div>
     <div class="clients__footer">
-      <img class="clients__lable" src="#" width="100" height="100" alt="HITS"/>
-      <img class="clients__lable" src="#" width="100" height="100" alt="rvlr"/>
-      <img class="clients__lable" src="#" width="100" height="100" alt="ea"/>
-      <img class="clients__lable" src="#" width="100" height="100" alt="igor"/>
-      <img class="clients__lable" src="#" width="100" height="100" alt="sienna"/>
+      <img class="clients__lable" src="img\partner-logo-1.png" width="100" height="100" alt="HITS"/>
+      <img class="clients__lable" src="img\partner-logo-4.png" width="100" height="100" alt="rvlr"/>
+      <img class="clients__lable" src="img\partner-logo-5.png" width="100" height="100" alt="ea"/>
+      <img class="clients__lable" src="img\partner-logo-7.png" width="100" height="100" alt="igor"/>
+      <img class="clients__lable" src="img\partner-logo-8.png" width="100" height="100" alt="sienna"/>
     </div>
   </div>
   <div class="browser">
@@ -140,10 +140,10 @@
       </form>
       <span class="try-now__arrow"></span>
       <span class="try-now__trial">30 days free trial for all.</span>
-      <p class="try-now__agree-terms">
-        By Signing up you agree to our terms & Services.
-      </p>
     </div>
+    <p class="try-now__agree-terms">
+      By Signing up you agree to our terms & Services.
+    </p>
   </div>
   <div class="page-footer">
     <ul class="page-footer__copyright">
